macros/tests/examples/vector3.stderr
error: unexpected literal
  --> tests/examples/vector3.rs:12:22
   |
12 |     vector![1.0, 2.0 3.0];
   |                      ^^^
