macros/tests/examples/vector3.rs
#[macro_use]
extern crate beaumont_macros;
fn main() {
    vector![1.0, 2.0 3.0];
}